Enabled Java 15 preview features